Challenge numbering in Map fixed to work properly on IE.

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -231,6 +231,12 @@ ul {
   font-size: 20px;
 }
 
+.map-row-numbers {
+  text-align: right;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .link-table td{
   font-size: 16px;
   border-top: none !important;
